# ai_interviewer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
interface/: admin_interface.py  user_interface.py
pages/: admin_interface.py  user_interface.py
src/: main.py  model.py  questions.json
src/database/: db_handler.py  models.py
src/llm/: mistral_api_llm.py
src/stt/: whisper_stt.py
src/tts/: coqui_tts.py  mozilla_tts.py
tests/: test_database.py  test_llm.py  test_stt.py  test_tts.py
текст и материалы/: материалы.txt  улучшения.txt
