[tool.poetry]
name = "ai-interviewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vosk = "^0.3.45"
speechrecognition = "^3.10.4"
pyttsx3 = "^2.98"
mistralai = "^1.1.0"
wave = "^0.0.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
